--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   </head>
   <body >
     <div class="top-container">
-      <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud"src="cloud.png" alt="cloud-img">
       <h1><em> I'm Hafssa.</em></h1>
       <h2>a programmer</h2>
-      <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
+      <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="hafssa" src="images\hafssa.png" alt="image">
+          <img class="hafssa" src="hafssa.png" alt="image">
           <h2>Hello.</h2>
           <p class="intro"> Hi I'm a Python programmer and Economics and management student.I'am a Web Developer and i love dogs🐶.</p>
         </div>
@@ -29,12 +29,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="api-image" src="images/api.png" alt="api-image">
+            <img class="api-image" src="api.png" alt="api-image">
             <h3>Design & Development</h3>
             <p>I started learning to code when I was 20 years old because I wanted to make my own video gaims.Over time ,I have gained a wealthe of experience designing and devleping mobile and web applications</p>
           </div>
           <div class="skill-row">
-            <img class="machine-image" src="images/data-science.png" alt="machine-image">
+            <img class="machine-image" src="data-science.png" alt="machine-image">
             <h3>Machine learning with Python</h3>
             <p>After I finished learning Python code, I found myself interested in machine learning and the data scientist, so I started taking online courses.</p>
           </div>
